# examples

./: .access  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  Abdelone  Dubem  Lava  Marzz payment  README.md  Sanvalentin  Test app  UPGRADE_GUIDE.md  build~splice~output~api~README.md  eslint.config.mjs  faq.md  feature-preview-agreement.md  fields.json  manage.py  package-lock.json  package.json  plopfile.js  plopfile.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  prolinkIBERIA  publishing-templates.md  requirements.txt  scoreboard  temp.txt  turbo.json  update-dep.mjs  vercel.json  zimviral
.changeset/: blue-trains-kiss.md  config.json  extend-deploy-button.md  grumpy-starfishes-sparkle.md  khaki-onions-tease.md  nasty-grapes-guess.md  unlucky-emus-sort.md
.cursor/: index.mdc  mcp.json
.cursor/rules/: directory-map.mdc  trigger-e2b.mdc
.github/: CODEOWNERS  Montadinhas  README.md  pull_request_template.md  renovate.json
.github/workflows/: ci.yml  create-vercel-project.yml  faster-template-prebuild-boilerplate-nextjs.yml  faster-template-prebuild-vercel-tutor.yml  faster-template-prebuild-vibe-coding-platform.yml  mobsf.yml  njsscan.md  njsscan.npm  njsscan.yml  playwright.yml  publish-template.yaml  release.yml  template.yml
.husky/: pre-commit
.ralph/: @AGENT.md  @fix_plan.md  PROMPT.md
app-directory/css-in-js/: README.md  next-env.d.ts  package.json  pnpm-lock.yaml
app-directory/i18n/: README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
app-directory/redirect-with-fallback/: .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  redirects.d.ts  redirects.js  turbo.json
app-directory/share-state/: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
app-directory/supabase-nextjs/: README.md  package.json  pnpm-lock.yaml  turbo.json
apps/vibe-coding-platform/: .env.example  .gitignore  DEPLOY.md  README.md  TRIGGER_E2B_SETUP.md  TRIGGER_INTEGRATION.md  instrumentation-client.ts  jest.config.ts  jest.setup.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  test-auto-pnpm.ts  test-pnpm-debug.ts  test-pnpm-setup.ts  test-sandbox.ts  trigger.config.ts  tsconfig.json  vercel.json
build-output-api/: .gitignore  README.md
build-output-api/draft-mode/: README.md
build-output-api/edge-function/: README.md
build-output-api/edge-functions/: README.md
build-output-api/edge-middleware/: README.md
build-output-api/image-optimization/: README.md
build-output-api/isr-api-routes/: README.md
build-output-api/isr-revalidation/: README.md  package.json
build-output-api/on-demand-isr/: README.md
build-output-api/on-demand-isr-revalidation/: README.md
build-output-api/overrides/: README.md
build-output-api/routes/: README.md
container-images/: package.json
docs/: 01-introduction.md  02-next-js.md  README.md  background.md  docs.md
edge-functions/: README.md
edge-middleware/: README.md
example/: urls.py  views.py
examples/: README.md
flags-sdk/: README.md
hostname-rewrites/: README.md
internal/: .gitignore  README.md  fields.json  package.json  pnpm-lock.yaml  publishing-templates.md  readme.md  tsconfig.json  turbo.json
middleware/: README.md  package-lock.json  package.json
misc/: .gitignore  fields.json  package.json  plopfile.mjs
python/vibe-coding-ide/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  server.py
python/vibe-coding-ide/backend/src/: auth.py  run_store.py  sse.py
python/vibe-coding-ide/backend/src/agent/: _prompt.md  agent.py  context.py  utils.py
python/vibe-coding-ide/backend/src/agent/tools/: __init__.py  core.py  fs_ops.py  sandbox.py
python/vibe-coding-ide/backend/src/api/: agent.py  models.py  sandbox.py
python/vibe-coding-ide/backend/src/sandbox/: command.py  runtimes.py  utils.py
rust/axum/: Cargo.toml  README.md  vercel.json
rust/axum/api/: axum.rs
rust/hello-world/: .gitignore  Cargo.toml  README.md  index.html
rust/hello-world/api/: hello.rs  realistic-math-bench.rs  simple.rs  slower-bench.rs  streaming.rs
rust/wait-until/: .vercelignore  AGENTS.md  Cargo.toml  README.md  index.html
rust/wait-until/api/: recent.rs  wait-until.rs
rust/websocket/: .gitignore  Cargo.toml  README.md  index.html  vercel.json
rust/websocket/api/: websocket.rs
scripts/: create-project.mjs  force-update-templates.ts  generate-force-update-template-command.mjs  test-script.mjs  tsconfig.json  update-all-templates.mjs  update-fields.ts  update-next.js  update-template.mjs  update-template.ts  update-templates.mjs  update-templates.ts
toolbar/: toolbar-hypertune
ui/: layout.tsx  package.json
vercel-api-routes/: index.html
vercel-tutor/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  steps.json  tailwind.config.ts
vercel_app/: settings.py  urls.py
เริ่มต้น/: README.md
(+5126 files in other folders)
